feat: update namespaces and tests"

--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Dcplibrary\\Notices\\": "src/",
-            "Dcplibrary\\Notices\\Database\\Factories\\": "database/factories/"
+            "Dcplibrary\\Notices\\": "src/"
         }
     },
     "autoload-dev": {
