--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "php": "^8.1",
         "illuminate/support": "^11.0|^12.0",
         "illuminate/database": "^11.0|^12.0",
-        "illuminate/console": "^11.0|^12.0"
+        "illuminate/console": "^11.0|^12.0",
+        "livewire/livewire": "^3.7"
     },
     "require-dev": {
         "orchestra/testbench": "^10.0|^11.0",
