chore: fix semantic-release github action

--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -1,14 +1,17 @@
-# Run the workflow when a Pull Request is opened or when changes are pushed to main
+# Run the workflow when changes are pushed to main
 name: Semantic-Release
-on: push
+on:
+  push:
+    branches:
+      - main
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
-      - uses: actions/setup-node@v6
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 'lts/*'
+          node-version: '20.x'
       - run: npm ci
 #      - run: npm test
       - name: Release
