chore: configure semantic-release release rules

--- a/package.json
+++ b/package.json
@@ -28,7 +28,15 @@
     "branches": ["main"],
     "tagFormat": "v${version}",
     "plugins": [
-      "@semantic-release/commit-analyzer",
+      [
+        "@semantic-release/commit-analyzer",
+        {
+          "preset": "angular",
+          "releaseRules": [
+            { "type": "feat", "release": "major" }
+          ]
+        }
+      ],
       "@semantic-release/release-notes-generator",
       "@semantic-release/changelog",
       [
